# shared-api-schema

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini
{{ cookiecutter.project_slug }}/.github/workflows/: apply_global.yml  develop_branch_deployment.yml  jira_ticket_check.yml  main_branch_deployment.yml  pull_request.yml  terraform-fmt.yaml
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/data/: patients.py
{{ cookiecutter.project_slug }}/app/routers/: health_routers.py  patient_routers.py
{{ cookiecutter.project_slug }}/app/services/: health_service.py  patient_service.py
{{ cookiecutter.project_slug }}/app/utils/: hippospace.py  settings.py
{{ cookiecutter.project_slug }}/integration/: settings.py
{{ cookiecutter.project_slug }}/integration/api/: conftest.py  test_patients.py
{{ cookiecutter.project_slug }}/scripts/: aws_login.sh  generate_dev_auth_token.sh
{{ cookiecutter.project_slug }}/terraform/environments/: alerts.tf  grafana.tf  iam.tf  integration_test.tf  k8s.tf  outputs.tf  pull_request.tf.template  setup.tf  variables.tf  versions.tf
{{ cookiecutter.project_slug }}/terraform/global/: ecr.tf  outputs.tf  setup.tf  versions.tf
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/data/: test_patients.py
{{ cookiecutter.project_slug }}/tests/routers/: conftest.py  test_health_routers.py  (+2 more)
(+51 files in other folders)
